--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Perform pre-cache
         run: |
           deno cache \
-            ${DENOPS_TEST_DENOPS_PATH}/denops/@denops-private/mod.ts ./denops/fall/main.ts
+            ${DENOPS_TEST_DENOPS_PATH}/denops/@denops-private/mod.ts
 
       - name: Test
         run: deno task test:coverage
