--- a/deno.jsonc
+++ b/deno.jsonc
@@ -115,12 +115,14 @@
     "@core/errorutil": "jsr:@core/errorutil@^1.2.0",
     "@core/iterutil": "jsr:@core/iterutil@^0.9.0",
     "@denops/std": "jsr:@denops/std@^7.3.0",
+    "@denops/test": "jsr:@denops/test@^3.0.4",
     "@lambdalisue/systemopen": "jsr:@lambdalisue/systemopen@^1.0.0",
     "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/fs": "jsr:@std/fs@^1.0.5",
     "@std/jsonc": "jsr:@std/jsonc@^1.0.1",
     "@std/path": "jsr:@std/path@^1.0.8",
     "@std/streams": "jsr:@std/streams@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.4",
     "@vim-fall/core": "jsr:@vim-fall/core@^0.1.0-pre.0",
     "fzf": "npm:fzf@^0.5.2"
   }
