feat!: remove `Projector` and add `Modifier` and `Filter`

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -37,7 +37,6 @@
     "./builtin/matcher/regexp": "./builtin/matcher/regexp.ts",
     "./builtin/matcher/substring": "./builtin/matcher/substring.ts",
     "./builtin/modifier": "./builtin/modifier/mod.ts",
-    "./builtin/modifier/noop": "./builtin/modifier/noop.ts",
     "./builtin/modifier/relative-path": "./builtin/modifier/relative_path.ts",
     "./builtin/previewer": "./builtin/previewer/mod.ts",
     "./builtin/previewer/buffer": "./builtin/previewer/buffer.ts",
@@ -70,10 +69,11 @@
     "./config": "./config.ts",
     "./coordinator": "./coordinator.ts",
     "./curator": "./curator.ts",
+    "./filter": "./filter.ts",
     "./item": "./item.ts",
     "./matcher": "./matcher.ts",
+    "./modifier": "./modifier.ts",
     "./previewer": "./previewer.ts",
-    "./projector": "./projector.ts",
     "./renderer": "./renderer.ts",
     "./sorter": "./sorter.ts",
     "./source": "./source.ts",
@@ -123,7 +123,7 @@
     "@std/path": "jsr:@std/path@^1.0.8",
     "@std/streams": "jsr:@std/streams@^1.0.8",
     "@std/testing": "jsr:@std/testing@^1.0.4",
-    "@vim-fall/core": "jsr:@vim-fall/core@^0.1.3",
+    "@vim-fall/core": "jsr:@vim-fall/core@^0.1.4",
     "fzf": "npm:fzf@^0.5.2",
     "jsr:@vim-fall/std@^0.1.0": "./mod.ts",
     "jsr:@vim-fall/std@^0.1.0/builtin": "./builtin/mod.ts"
