--- a/deno.jsonc
+++ b/deno.jsonc
@@ -26,23 +26,22 @@
     "./builtin/curator/grep": "./builtin/curator/grep.ts",
     "./builtin/curator/noop": "./builtin/curator/noop.ts",
     "./builtin/curator/rg": "./builtin/curator/rg.ts",
-    "./builtin/filter": "./builtin/filter/mod.ts",
-    "./builtin/filter/cwd": "./builtin/filter/cwd.ts",
-    "./builtin/filter/exists": "./builtin/filter/exists.ts",
-    "./builtin/filter/noop": "./builtin/filter/noop.ts",
-    "./builtin/filter/regexp": "./builtin/filter/regexp.ts",
     "./builtin/matcher": "./builtin/matcher/mod.ts",
     "./builtin/matcher/fzf": "./builtin/matcher/fzf.ts",
     "./builtin/matcher/noop": "./builtin/matcher/noop.ts",
     "./builtin/matcher/regexp": "./builtin/matcher/regexp.ts",
     "./builtin/matcher/substring": "./builtin/matcher/substring.ts",
-    "./builtin/modifier": "./builtin/modifier/mod.ts",
-    "./builtin/modifier/relative-path": "./builtin/modifier/relative_path.ts",
     "./builtin/previewer": "./builtin/previewer/mod.ts",
     "./builtin/previewer/buffer": "./builtin/previewer/buffer.ts",
     "./builtin/previewer/file": "./builtin/previewer/file.ts",
     "./builtin/previewer/helptag": "./builtin/previewer/helptag.ts",
     "./builtin/previewer/noop": "./builtin/previewer/noop.ts",
+    "./builtin/refiner": "./builtin/refiner/mod.ts",
+    "./builtin/refiner/cwd": "./builtin/refiner/cwd.ts",
+    "./builtin/refiner/exists": "./builtin/refiner/exists.ts",
+    "./builtin/refiner/noop": "./builtin/refiner/noop.ts",
+    "./builtin/refiner/regexp": "./builtin/refiner/regexp.ts",
+    "./builtin/refiner/relative-path": "./builtin/refiner/relative_path.ts",
     "./builtin/renderer": "./builtin/renderer/mod.ts",
     "./builtin/renderer/helptag": "./builtin/renderer/helptag.ts",
     "./builtin/renderer/nerdfont": "./builtin/renderer/nerdfont.ts",
@@ -69,11 +68,10 @@
     "./config": "./config.ts",
     "./coordinator": "./coordinator.ts",
     "./curator": "./curator.ts",
-    "./filter": "./filter.ts",
     "./item": "./item.ts",
     "./matcher": "./matcher.ts",
-    "./modifier": "./modifier.ts",
     "./previewer": "./previewer.ts",
+    "./refiner": "./refiner.ts",
     "./renderer": "./renderer.ts",
     "./sorter": "./sorter.ts",
     "./source": "./source.ts",
