--- a/deno.jsonc
+++ b/deno.jsonc
@@ -114,6 +114,7 @@
     "@denops/std": "jsr:@denops/std@^7.3.0",
     "@denops/test": "jsr:@denops/test@^3.0.4",
     "@lambdalisue/systemopen": "jsr:@lambdalisue/systemopen@^1.0.0",
+    "@lambdalisue/unnullish": "jsr:@lambdalisue/unnullish@^1.0.2",
     "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/fs": "jsr:@std/fs@^1.0.5",
     "@std/jsonc": "jsr:@std/jsonc@^1.0.1",
