feat: add bindSourceArgs and bindCuratorArgs utility functions
Add utility functions to create a new source/curator which calls another
source/curator with some fixed args.

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,6 +4,7 @@
   "exports": {
     ".": "./mod.ts",
     "./action": "./action.ts",
+    "./args-binder": "./args_binder.ts",
     "./builtin": "./builtin/mod.ts",
     "./builtin/action": "./builtin/action/mod.ts",
     "./builtin/action/buffer": "./builtin/action/buffer.ts",
